<resources>
    <string name="app_name">To Do List</string>
    <string name="error_unknown">Unknown error, please, try again</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="success_create_account">Succes, please login</string>
    <string name="filed_login">Error Login</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="exist">Email already in use</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="activity">Activities that have been carried out</string>
    <string name="or">OR</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="register">Create Account</string>
    <string name="main">main</string>
    <string name="activty_add">Activity</string>
    <string name="desc_activity">Description</string>
</resources>
