<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.Login"
             android:orientation="vertical"
              android:gravity="center"
              android:background="@android:color/white"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_horizontal_margin">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_big"
            style="@style/Header"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:hint="@string/hint_enter_email"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:hint="@string/hint_enter_password"
                android:id="@+id/editTextPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:background="@color/colorPrimary"
            android:id="@+id/loginPasswordButton"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:layout_width="match_parent"
            android:text="@string/button_signin_with_password"
            android:textColor="@android:color/white"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            style="@style/LoginCreateTextButton"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/loginGoogleButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    <LinearLayout
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <TextView
                style="@style/LoginCreateText"
                android:id="@+id/tv_dont_have_account"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text_dont_have_account"/>

        <TextView
                style="@style/LoginCreateTextButton"
                android:id="@+id/createAccountText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_create_account"/>
    </LinearLayout>

</LinearLayout>