<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.SignUp"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_horizontal_margin"
              android:background="@android:color/white">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_big"
            style="@style/Header"/>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputUsername"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:hint="@string/hint_enter_username"
                android:id="@+id/editTextUsername"
                android:inputType="textCapWords"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:hint="@string/hint_enter_email"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:hint="@string/hint_enter_password"
                android:id="@+id/editTextPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:background="@color/colorPrimary"
            android:id="@+id/createAccountButton"
            android:layout_height="@dimen/input_field_height"
            android:layout_width="match_parent"
            android:text="@string/title_activity_create_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_buttons_text_size"/>

</LinearLayout>
