<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_margin="@dimen/activity_vertical_margin">
    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputActivity"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:maxLength="10"
                android:hint="@string/activty_add"
                android:id="@+id/activity"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/inputDesc"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/HintText"
            app:helperTextTextAppearance="@style/HelperText">

        <EditText
                android:hint="@string/desc_activity"
                android:id="@+id/description"
                android:maxLines="3"
                android:maxLength="80"
                android:inputType="textCapCharacters"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:nextFocusDown="@+id/btn_success"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/login_buttons_text_size"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
    <Button
            android:layout_gravity="center"
            android:id="@+id/btn_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?attr/buttonBarStyle"/>
    <Button
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_gravity="center"
            android:id="@+id/btn_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?attr/buttonBarStyle"/>
    </LinearLayout>
</LinearLayout>
